# Po_core_-Original-design

./: .coveragerc  .dockerignore  .env.example  .flake8  .gitignore  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  Dockerfile  GRAND_ARCHITECT_ASSESSMENT.md  ISSUES.md  Makefile  NEXT_STEPS.md  PHASE_PLAN_tournament.md  PHASE_PLAN_v2.md  PROJECT_SUMMARY.md  Po_core_Manifesto_When_Pigs_Fly.md  Po_core_spec_doc_v1.0.md  QUICKSTART.md  QUICKSTART_EN.md  README.md  REPOSITORY_STRUCTURE.md  ROADMAP_FINAL_FORM.md  docker-compose.yml  philosopher module  pyproject.toml  pytest.ini  regenerate_golden.py  requirements-dev.txt  requirements.txt  足場確認20260219.md
.codex/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
01_specifications/: Po_core_spec_doc_v1.0_English.md  Po_core_spec_doc_v1.0_japanese.md  README_01_specifications_English.md
02_architecture/: README_02_architecture_English.md  README_02_architecture_Japanese.md
03_api/: Po_trace Event Metadata API Ver.2 Design Template.md  Po_trace_Event_Metadata_API_Ver2_設計テンプレート.md  Python FastAPI code for the Po_trace Event Metadata API Ver.2..md  README_03_api_English.md  README_03_api_Japanese.md  api_chains_API仕様書_position補完式付き.md  apichains API Specification Document (with Position Completion Expression).md  python「Po_trace Event Metadata API Ver.2 設計テンプレート（多言語・スキーマ・バージョン対応）」.md
04_modules/: README_04_modules_English.md  README_04_modules_Japanese.md
05_research/: AI_that_Chooses_to_Speak_Abstract_Philosophers_Ver3_en.md  Po_core_Academic_Paper_2026.md  Po_self_AI_Appendix_A2_Philosophers_Tensor_Mapping_en.md  Po_self_AI_付録_A2_哲学者_テンソル対応表.md  Po_self_bilingual_glossary_en_jp.md  Po_self_paper_00_Abstract_and_TOC_en.md  Po_self_paper_01_Prologue_en.md  Po_self_paper_02_Overview_en.md  Po_self_paper_03_Sartre_en.md  Po_self_paper_04_Philosophy_Map_en.md  Po_self_paper_05_Viewer_Interference_en.md  Po_self_paper_06_Freedom_Ethics_Tensors_en.md  Po_self_paper_07_Persona_Tensors_and_Series_Evolution_en.md  Po_self_paper_08_Po_self_vs_LLMs_en.md  Po_self_paper_09_Applications_and_Social_Implementation_en.md  Po_self_paper_10_Future_of_Philosophical_Self_en.md  Po_self_paper_11_Full_Stack_Framework_en.md  Po_self_paper_12_Society_and_Evolution_Networks_en.md  Po_self_paper_13_Conclusion_en.md  Po_self_paper_Appendices_en.md  Po_self_paper_chapter_index_en.md  Po_self_論文まとめ2.md  README_05_research.md  README_05_research_en.md  Self-Descriptive Semantic Evolution AI 2.md  構造拡張を導入した再構成型AIの実装設計と定量評価　20250714.md  語ることを選ぶAI_Abstract_哲学者Ver3.md
audit/: finding_resolution_matrix.md  finding_resolution_matrix_v2.md  phase_e_findings.md  phase_f_final_report.md  phase_g_closure_report.md  phase_h_bandit_closure_report.md  postfix_baseline_notes.md
calibration/: README.md  axis_scoring_labels_sample.jsonl  axis_scoring_params_example.json  dataset_format.md
docs/: AI_AGENT_INITIALIZATION_RULES.md  ARCHITECTURE_NORTH_STAR.md  CONCEPT_DRIFT_GUARD.md  CONTRIBUTING_PHILOSOPHER.md  ENGINE_TRACE_CONTRACT.md  GLOSSARY.md  GOVERNANCE.md  LOCAL_LLM_GUIDE.md  MANUAL_LLM_TESTING.md  ROADMAP.md  RUN_CASE.md  SAFETY.md  STATUS.md  STRICT_CORE_RULES.md  TUTORIAL.md  VISUALIZATION_GUIDE.md  calibration_axis_scoring.md  completion_matrix.md  decision_axis_spec.md  original_design_status.md  philosopher_plugin_spec.md  release.md  status.md  厳格固定ルール.md
examples/: LARGE_SCALE_PROTOTYPES.md  MEDIUM_PROTOTYPES.md  PO_PARTY.md  README.md  api_demo.py  batch_analyzer.py  enterprise_dashboard.py  full_scale_reasoning_test.py  interactive_viewer.py  llm_test_results_template.md  multi_agent_reasoning.py  multi_llm_testing.py  no_api_visualization_demo.py  philosopher_comparison.py  po_party_demo.py  po_self_controller_demo.py  quick_test.py  simple_demo.py  test_20_philosophers_simple.py  viewer_demo.py  visualization_demo.py  web_api_server.py
experiments/: 20_philosophers_solarwill_prompt_BASELINE.md  20_philosophers_solarwill_prompt_WITHOUT_ethics.md  20_philosophers_solarwill_prompt_WITH_ethics.md  CHANGELOG_V3.md  EXPERIMENT_GUIDE.md  EXPERIMENT_GUIDE_V3.md  PHASE2_TEST_GUIDE.md  PHASE3_JUSTICE_TEST_GUIDE.md  PROMPT_WITHOUT_ETHICS.txt  PROMPT_WITHOUT_ETHICS_JUSTICE.txt  PROMPT_WITH_ETHICS.txt  PROMPT_WITH_ETHICS_JUSTICE.txt  README.md  README_20_Philosopher_Test.md  README_V3.md  RESULTS_TEMPLATE.md  RESULTS_TEMPLATE_JUSTICE.md  WORKFLOW_GUIDE.md  analyze_results.py  cross_llm_emergence_test.py  cross_llm_emergence_test_v2.py  cross_llm_emergence_test_v3.py  darkpattern_spec_cancel_flow.md  demo_constraint_modes.py  experiment_manifest.yaml  generate_research_data.py  phase4_baseline_justice.txt  phase4_po_core_only_justice.txt  phase4_po_core_with_ethics_justice.txt  phase4_trolley_text.txt  phase_transition_analysis.py  philosopher_correlation_analysis.py  po_core_20_philosopher_test.py  po_core_39_philosophers_system_prompt.md  po_core_system_prompt_v1.2.md  run_20_philosophers_experiment.py  run_complete_analysis.py  run_darkpattern_review_experiment.py  run_solarwill_6mode_v2.py  run_solarwill_experiment.py  (+8 more)
papers/: Po_core_Academia_Paper.md  README_Solar_Will.md  Solar_Will_Ethics_Emergence.md  arxiv_paper_draft.md
reports/: forge_root_audit_2026-04-23.md  phase0_baseline_2026-04-24.md
scenarios/: case_001.yaml  case_001_expected.json  case_002.yaml  case_002_expected.json  case_003.yaml  case_003_expected.json  case_004.yaml  case_005.yaml  case_006.yaml  case_006_expected.json  case_007.yaml  case_008.yaml  case_009.yaml  case_009_expected.json  case_010.yaml  case_010_expected.json  case_011.yaml  case_011_expected.json  case_012.yaml  case_012_expected.json  case_013.yaml  case_013_expected.json  case_014.yaml  case_014_expected.json  case_015.yaml  case_015_expected.json  session_001_base.yaml
schemas/: po_self_decision_v1.schema.json  po_self_seedling_v1.schema.json  po_trace_blocked_v1.schema.json  po_trace_event_v1.schema.json  po_trace_reactivation_plan_v1.schema.json  po_trace_reactivation_proposal_v1.schema.json  (+10 more)
(+1086 files in other folders)
